--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Function library example</title>
+    <title>Rock-Paper-Scissors Game</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
+  <div class="content">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </div>
+  <div class="results">
+    <p id="winner"></p>
+    <p id="score"></p>
+  </div>
+  
   <script src="javascript.js"></script>
 </body>
 </html>
