Adição Pokemon GUI inicial

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Rock-Paper-Scissors Game</title>
+    <title>Jo-Ken-Pokemon Game</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
   </head>
 <body>
   <div class="content">
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <div id="game-display"></div>
+    <div class="button-set">
+      <button id ="bulbasaur" class="bulbasaur">Bulbasaur</button>
+      <button id ="charmander" class="charmander">Charmander</button>
+      <button id ="squirtle" class="squirtle">Squirtle</button>
+    </div>
   </div>
   <div class="results">
     <p id="winner"></p>
